Added /auth command with current session data